Corrected Builder and updated publisher